# BookStoreSystem

./: .gitignore  CMakeLists.txt  README.md
Web/: README.md
Web/frontend/: index.html  package-lock.json  package.json
Web/frontend/src/: App.vue  main.js
Web/frontend/src/layout/: AppMenu.vue  AppTopbar.vue
Web/frontend/src/router/: index.js
Web/frontend/src/views/: BookManage.vue  Home.vue  Login.vue  Logout.vue  PurchaseBook.vue  SearchBook.vue  UserManage.vue  ViewLogs.vue
docs/HW_requirement/: README.md  bonus.md  requirements.md  业务要求.md
docs/dev/: 开发文档.md  总体设计文档.md  需求分析文档.md
prework/: debug.hpp  memoryriver.hpp  test.cpp
src/: book.hpp  command.hpp  database.hpp  exception.hpp  fileio.hpp  loger.hpp  main.cpp  server.hpp  string.hpp  system.hpp  user.hpp  utility.hpp
